# src/routes/v1/fragment.ts
@@ -1,0 +1,13 @@
+import { type FastifyInstance } from "fastify"
+
+import { createFragmentHandler } from "@/controllers/fragment"
+import { createFragmentSchema } from "@/models/schemas/fragment"
+
+export default (fastify: FastifyInstance) => {
+	fastify.route({
+		handler: createFragmentHandler,
+		method: "POST",
+		schema: createFragmentSchema,
+		url: "/projects/:projectId/fragments",
+	})
+}
